http/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: perf-http
  labels:
    istio-injection: disabled
