http/03-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: perf-http
spec:
  selector:
    istio: ${ISTIO_INGRESS_SVC}
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "perf-http.${DNS_SUFFIX}"
